force-app/main/default/objects/User_Playlist__c/User_Playlist__c.object-meta.xml
<CustomObject>
    <label>User Playlist</label>
    <nameField>
        <label>User Playlist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Playlists</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>