force-app/main/default/objects/User_Playlist__c/fields/Playtime__c.field-meta.xml
<CustomField>
    <fullName>Playtime__c</fullName>
    <label>Playtime</label>
    <summarizedField>Playlist_Song__c.Duration_Song__c</summarizedField>
    <summaryForeignKey>Playlist_Song__c.PlaylistId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>