force-app/main/default/objects/User_Playlist__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User__c</referenceTo>
    <relationshipName>user_playlists</relationshipName>
    <type>Lookup</type>
</CustomField>